--- a/app/templates/components/search-display.hbs
+++ b/app/templates/components/search-display.hbs
@@ -1,40 +1,40 @@
 {{#if model.people}}
-<details open class="section people">
+<details open class="section people" data-test-search-display-people>
   <summary>People</summary>
   {{people-component people=filteredModel.people}}
 </details>
 {{/if}}
 
 {{#if model.starships}}
-<details class="section starships">
+<details open class="section starships">
   <summary>Starships</summary>
   {{starships-component starships=filteredModel.starships}}
 </details>
 {{/if}}
 
 {{#if model.vehicles}}
-<details class="section vehicles">
+<details open class="section vehicles" data-test-search-display-vehicles>
   <summary>Vehicles</summary>
   {{vehicles-component vehicles=filteredModel.vehicles}}
 </details>
 {{/if}}
 
 {{#if model.species}}
-<details class="section species">
+<details open class="section species">
   <summary>Species</summary>
   {{species-component species=filteredModel.species}}
 </details>
 {{/if}}
 
 {{#if model.planets}}
-<details class="section planets">
+<details open class="section planets">
   <summary>Planets</summary>
     {{planets-component planets=filteredModel.planets}}
 </details>
 {{/if}}
 
 {{#if model.films}}
-<details class="section films">
+<details open class="section films">
   <summary>Films</summary>
   {{films-component films=filteredModel.films}}
 </details>
