--- a/app/templates/components/vehicles-component.hbs
+++ b/app/templates/components/vehicles-component.hbs
@@ -1,9 +1,9 @@
 <div class="section-content">
-{{#each vehicles as |vehicle|}}
+{{#each vehicles as |vehicle index|}}
 {{#link-to "vehicles" vehicle.id}}
 <div class="card vehicle">
   <ul>
-    <lh>{{vehicle.name}}</lh>
+    <lh data-test-header-vehicle={{index}}>{{vehicle.name}}</lh>
     <li>Model: {{vehicle.model}}</li>
     <li>Class: {{vehicle.vehicle_class}}</li>
     <li>Manufacturer: {{vehicle.manufacturer}}</li>
